ANTLR_JavaELParser/JavaELParser.py
# Generated from JavaELParser.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JavaELParser ( Parser ):

    grammarFileName = "JavaELParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'", "','", 
                     "'?'", "':'", "'+'", "'-'", "'*'", "<INVALID>", "<INVALID>", 
                     "'empty'", "<INVALID>", "'null'" ]

    symbolicNames = [ "<INVALID>", "OpenParen", "CloseParen", "OpenBracket", 
                      "CloseBracket", "And", "Or", "Not", "Equality", "Relation", 
                      "Logical", "Equal", "NotEqual", "Greater", "Less", 
                      "GreaterEqual", "LessEqual", "Dot", "Comma", "Question", 
                      "DoubleDots", "Plus", "Minus", "Mul", "Div", "Mod", 
                      "Empty", "BooleanLiteral", "NullLiteral", "StringLiteral", 
                      "IntegerLiteral", "WS", "Identifyer" ]

    RULE_ternary = 0
    RULE_expression = 1
    RULE_term = 2
    RULE_equality = 3
    RULE_relation = 4
    RULE_algebraic = 5
    RULE_member = 6
    RULE_base = 7
    RULE_value = 8
    RULE_primitive = 9

    ruleNames =  [ "ternary", "expression", "term", "equality", "relation", 
                   "algebraic", "member", "base", "value", "primitive" ]

    EOF = Token.EOF
    OpenParen=1
    CloseParen=2
    OpenBracket=3
    CloseBracket=4
    And=5
    Or=6
    Not=7
    Equality=8
    Relation=9
    Logical=10
    Equal=11
    NotEqual=12
    Greater=13
    Less=14
    GreaterEqual=15
    LessEqual=16
    Dot=17
    Comma=18
    Question=19
    DoubleDots=20
    Plus=21
    Minus=22
    Mul=23
    Div=24
    Mod=25
    Empty=26
    BooleanLiteral=27
    NullLiteral=28
    StringLiteral=29
    IntegerLiteral=30
    WS=31
    Identifyer=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class TernaryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(JavaELParser.ExpressionContext,0)


        def Question(self):
            return self.getToken(JavaELParser.Question, 0)

        def ternary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.TernaryContext)
            else:
                return self.getTypedRuleContext(JavaELParser.TernaryContext,i)


        def DoubleDots(self):
            return self.getToken(JavaELParser.DoubleDots, 0)

        def getRuleIndex(self):
            return JavaELParser.RULE_ternary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTernary" ):
                listener.enterTernary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTernary" ):
                listener.exitTernary(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTernary" ):
                return visitor.visitTernary(self)
            else:
                return visitor.visitChildren(self)




    def ternary(self):

        localctx = JavaELParser.TernaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_ternary)
        try:
            self.state = 27
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 20
                self.expression()
                self.state = 21
                self.match(JavaELParser.Question)
                self.state = 22
                self.ternary()
                self.state = 23
                self.match(JavaELParser.DoubleDots)
                self.state = 24
                self.ternary()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 26
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.TermContext)
            else:
                return self.getTypedRuleContext(JavaELParser.TermContext,i)


        def Or(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Or)
            else:
                return self.getToken(JavaELParser.Or, i)

        def getRuleIndex(self):
            return JavaELParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = JavaELParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self.term()
            self.state = 34
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 30
                    self.match(JavaELParser.Or)
                    self.state = 31
                    self.term() 
                self.state = 36
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.EqualityContext)
            else:
                return self.getTypedRuleContext(JavaELParser.EqualityContext,i)


        def And(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.And)
            else:
                return self.getToken(JavaELParser.And, i)

        def getRuleIndex(self):
            return JavaELParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = JavaELParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_term)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self.equality()
            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 38
                    self.match(JavaELParser.And)
                    self.state = 39
                    self.equality() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.RelationContext)
            else:
                return self.getTypedRuleContext(JavaELParser.RelationContext,i)


        def Equality(self):
            return self.getToken(JavaELParser.Equality, 0)

        def getRuleIndex(self):
            return JavaELParser.RULE_equality

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEquality" ):
                listener.enterEquality(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEquality" ):
                listener.exitEquality(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEquality" ):
                return visitor.visitEquality(self)
            else:
                return visitor.visitChildren(self)




    def equality(self):

        localctx = JavaELParser.EqualityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_equality)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.relation()
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 46
                self.match(JavaELParser.Equality)
                self.state = 47
                self.relation()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def algebraic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.AlgebraicContext)
            else:
                return self.getTypedRuleContext(JavaELParser.AlgebraicContext,i)


        def Relation(self):
            return self.getToken(JavaELParser.Relation, 0)

        def OpenParen(self):
            return self.getToken(JavaELParser.OpenParen, 0)

        def ternary(self):
            return self.getTypedRuleContext(JavaELParser.TernaryContext,0)


        def CloseParen(self):
            return self.getToken(JavaELParser.CloseParen, 0)

        def getRuleIndex(self):
            return JavaELParser.RULE_relation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelation" ):
                listener.enterRelation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelation" ):
                listener.exitRelation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelation" ):
                return visitor.visitRelation(self)
            else:
                return visitor.visitChildren(self)




    def relation(self):

        localctx = JavaELParser.RelationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_relation)
        try:
            self.state = 59
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JavaELParser.Not, JavaELParser.Minus, JavaELParser.Empty, JavaELParser.BooleanLiteral, JavaELParser.NullLiteral, JavaELParser.StringLiteral, JavaELParser.IntegerLiteral, JavaELParser.Identifyer]:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.algebraic()
                self.state = 53
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                if la_ == 1:
                    self.state = 51
                    self.match(JavaELParser.Relation)
                    self.state = 52
                    self.algebraic()


                pass
            elif token in [JavaELParser.OpenParen]:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(JavaELParser.OpenParen)
                self.state = 56
                self.ternary()
                self.state = 57
                self.match(JavaELParser.CloseParen)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlgebraicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def member(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.MemberContext)
            else:
                return self.getTypedRuleContext(JavaELParser.MemberContext,i)


        def Plus(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Plus)
            else:
                return self.getToken(JavaELParser.Plus, i)

        def Minus(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Minus)
            else:
                return self.getToken(JavaELParser.Minus, i)

        def getRuleIndex(self):
            return JavaELParser.RULE_algebraic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlgebraic" ):
                listener.enterAlgebraic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlgebraic" ):
                listener.exitAlgebraic(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAlgebraic" ):
                return visitor.visitAlgebraic(self)
            else:
                return visitor.visitChildren(self)




    def algebraic(self):

        localctx = JavaELParser.AlgebraicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_algebraic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.member()
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 62
                    _la = self._input.LA(1)
                    if not(_la==JavaELParser.Plus or _la==JavaELParser.Minus):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 63
                    self.member() 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.BaseContext)
            else:
                return self.getTypedRuleContext(JavaELParser.BaseContext,i)


        def Mul(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Mul)
            else:
                return self.getToken(JavaELParser.Mul, i)

        def Div(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Div)
            else:
                return self.getToken(JavaELParser.Div, i)

        def Mod(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Mod)
            else:
                return self.getToken(JavaELParser.Mod, i)

        def getRuleIndex(self):
            return JavaELParser.RULE_member

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMember" ):
                listener.enterMember(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMember" ):
                listener.exitMember(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMember" ):
                return visitor.visitMember(self)
            else:
                return visitor.visitChildren(self)




    def member(self):

        localctx = JavaELParser.MemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_member)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.base()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 70
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaELParser.Mul) | (1 << JavaELParser.Div) | (1 << JavaELParser.Mod))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 71
                    self.base() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ternary(self):
            return self.getTypedRuleContext(JavaELParser.TernaryContext,0)


        def Empty(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Empty)
            else:
                return self.getToken(JavaELParser.Empty, i)

        def Not(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Not)
            else:
                return self.getToken(JavaELParser.Not, i)

        def Minus(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Minus)
            else:
                return self.getToken(JavaELParser.Minus, i)

        def value(self):
            return self.getTypedRuleContext(JavaELParser.ValueContext,0)


        def getRuleIndex(self):
            return JavaELParser.RULE_base

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBase" ):
                listener.enterBase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBase" ):
                listener.exitBase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBase" ):
                return visitor.visitBase(self)
            else:
                return visitor.visitChildren(self)




    def base(self):

        localctx = JavaELParser.BaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_base)
        self._la = 0 # Token type
        try:
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JavaELParser.Not, JavaELParser.Minus, JavaELParser.Empty]:
                self.enterOuterAlt(localctx, 1)
                self.state = 78 
                self._errHandler.sync(self)
                _alt = 1
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 77
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JavaELParser.Not) | (1 << JavaELParser.Minus) | (1 << JavaELParser.Empty))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()

                    else:
                        raise NoViableAltException(self)
                    self.state = 80 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                self.state = 82
                self.ternary()
                pass
            elif token in [JavaELParser.BooleanLiteral, JavaELParser.NullLiteral, JavaELParser.StringLiteral, JavaELParser.IntegerLiteral, JavaELParser.Identifyer]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JavaELParser.PrimitiveContext)
            else:
                return self.getTypedRuleContext(JavaELParser.PrimitiveContext,i)


        def Dot(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.Dot)
            else:
                return self.getToken(JavaELParser.Dot, i)

        def OpenBracket(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.OpenBracket)
            else:
                return self.getToken(JavaELParser.OpenBracket, i)

        def CloseBracket(self, i:int=None):
            if i is None:
                return self.getTokens(JavaELParser.CloseBracket)
            else:
                return self.getToken(JavaELParser.CloseBracket, i)

        def getRuleIndex(self):
            return JavaELParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = JavaELParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.primitive(0)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==JavaELParser.OpenBracket or _la==JavaELParser.Dot:
                self.state = 93
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [JavaELParser.Dot]:
                    self.state = 87
                    self.match(JavaELParser.Dot)
                    self.state = 88
                    self.primitive(0)
                    pass
                elif token in [JavaELParser.OpenBracket]:
                    self.state = 89
                    self.match(JavaELParser.OpenBracket)
                    self.state = 90
                    self.primitive(0)
                    self.state = 91
                    self.match(JavaELParser.CloseBracket)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrimitiveContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def StringLiteral(self):
            return self.getToken(JavaELParser.StringLiteral, 0)

        def BooleanLiteral(self):
            return self.getToken(JavaELParser.BooleanLiteral, 0)

        def NullLiteral(self):
            return self.getToken(JavaELParser.NullLiteral, 0)

        def IntegerLiteral(self):
            return self.getToken(JavaELParser.IntegerLiteral, 0)

        def Identifyer(self):
            return self.getToken(JavaELParser.Identifyer, 0)

        def primitive(self):
            return self.getTypedRuleContext(JavaELParser.PrimitiveContext,0)


        def OpenParen(self):
            return self.getToken(JavaELParser.OpenParen, 0)

        def CloseParen(self):
            return self.getToken(JavaELParser.CloseParen, 0)

        def value(self):
            return self.getTypedRuleContext(JavaELParser.ValueContext,0)


        def getRuleIndex(self):
            return JavaELParser.RULE_primitive

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimitive" ):
                listener.enterPrimitive(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimitive" ):
                listener.exitPrimitive(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimitive" ):
                return visitor.visitPrimitive(self)
            else:
                return visitor.visitChildren(self)



    def primitive(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = JavaELParser.PrimitiveContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_primitive, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [JavaELParser.StringLiteral]:
                self.state = 99
                self.match(JavaELParser.StringLiteral)
                pass
            elif token in [JavaELParser.BooleanLiteral]:
                self.state = 100
                self.match(JavaELParser.BooleanLiteral)
                pass
            elif token in [JavaELParser.NullLiteral]:
                self.state = 101
                self.match(JavaELParser.NullLiteral)
                pass
            elif token in [JavaELParser.IntegerLiteral]:
                self.state = 102
                self.match(JavaELParser.IntegerLiteral)
                pass
            elif token in [JavaELParser.Identifyer]:
                self.state = 103
                self.match(JavaELParser.Identifyer)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 116
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
                    if la_ == 1:
                        localctx = JavaELParser.PrimitiveContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_primitive)
                        self.state = 106
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 107
                        self.match(JavaELParser.OpenParen)

                        self.state = 108
                        self.value()
                        self.state = 109
                        self.match(JavaELParser.CloseParen)
                        pass

                    elif la_ == 2:
                        localctx = JavaELParser.PrimitiveContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_primitive)
                        self.state = 111
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 112
                        self.match(JavaELParser.OpenParen)
                        self.state = 113
                        self.match(JavaELParser.CloseParen)
                        pass

             
                self.state = 118
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[9] = self.primitive_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def primitive_sempred(self, localctx:PrimitiveContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




